--- a/Homework/W01/.vscode/launch.json
+++ b/Homework/W01/.vscode/launch.json
@@ -8,8 +8,8 @@
       "args": [],
       "stopAtEntry": false,
       "externalConsole": true,
-      "cwd": ".",
-      "program": "build/Debug/outDebug",
+      "cwd": "c:/Users/admin/Documents/GitHub/Object-Oriented-Programming-HCMUS/Homework/W01",
+      "program": "c:/Users/admin/Documents/GitHub/Object-Oriented-Programming-HCMUS/Homework/W01/build/Debug/outDebug",
       "MIMode": "gdb",
       "miDebuggerPath": "gdb",
       "setupCommands": [
