--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -66,6 +66,7 @@
     "string": "cpp",
     "unordered_map": "cpp",
     "vector": "cpp",
-    "system_error": "cpp"
+    "system_error": "cpp",
+    "iosfwd": "cpp"
   }
 }
